--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,10 +1,28 @@
-<h1>likesの一覧 ここにお気に入り一覧を表示するのだけど、やり方がわからん</h1>
+<div class="well">
+  <h3>お気に入り一覧 </h3>
+</div>
 
-<h3><%= params[:id] %></h3>
+<% if @likes.any? %>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>ユーザid</th>
+        <th>ユーザ名</th>
+        <th>メッセージ</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+     <% @likes.each do |like| %>
+        <tr>
+          <td><%= like.user_id %></td>
+          <td><%= User.select('name').find(like.user_id).name  %></td>
+          <td><%= like.content %></td>
+  
+          <td><%= render 'favorites/favorite_button', micropost: like %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-  <ul>
-    <% @likes.each do |like| %>
-      <li><%= like.user_id %> | <%= like.id %></li>
-    <% end %>
-  </ul>
-
+<% end %>
