--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,5 +1,7 @@
 <% if logged_in? %>
-  <h1>ログインしてる　<%= current_user %></h1>
+  <div class="well">
+    <h3>タイムライン </h3>
+  </div>
   <div class="row">
     <aside class="col-md-4">
       <%= form_for(@micropost) do |f| %>
