--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,7 +1,9 @@
 <% if logged_in? %>
   <div class="well">
-    <h3>タイムライン </h3>
+    <h3>タイムライン<%= link_to 'お気に入り一覧へ', likes_user_path(current_user), class: 'btn btn-info pull-right' %></h3>
   </div>
+  
+
   <div class="row">
     <aside class="col-md-4">
       <%= form_for(@micropost) do |f| %>
@@ -12,6 +14,7 @@
       <% end %>
     </aside>
     <div class="col-xs-8">
+
       <%= render 'microposts/microposts', microposts: @microposts %>
 
     </div>
